--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
   "name": "CPPS-Launcher",
   "version": "1.0.0",
-  "description": "Lightweight CPPS Launcher",
+  "description": "Lightweight Club Penguin (CPPS) Launcher",
   "author": "Dragon9135",
   "main": "main.js",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dragon9135/CPPS-Launcher.git"
+  },
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "make": "electron-forge make",
-    "package": "electron-forge package"
+    "build": "electron-builder --win"
   },
-  "keywords": [],
-  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "electron": "5.0.13"
+    "electron": "11.5.0",
+    "electron-builder": "^24.13.3"
   },
-  "config": {
-    "forge": {
-      "packagerConfig": {
-        "asar": true,
-        "icon": "./icon",
-        "extraResource": [
-          "./plugins"
-        ]
-      },
-      "rebuildConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-             "setupIcon": "./icon.ico"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "win32"
-          ]
-        }
-      ]
+  "build": {
+    "appId": "com.lightweight.cppslauncher",
+    "productName": "CPPS Launcher",
+    "files": [
+      "main.js",
+      "index.html",
+      "preload.js",
+      "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "./plugins/",
+        "to": "plugins/"
+      }
+    ],
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "icon": "icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "icon.ico",
+      "uninstallerIcon": "icon.ico"
     }
-  },
-  "dependencies": {}
+  }
 }
