--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CPPS-Launcher",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Lightweight Club Penguin (CPPS) Launcher",
   "author": "Dragon9135",
   "main": "main.js",
@@ -13,7 +13,9 @@
     "start": "electron .",
     "build": "electron-builder --win"
   },
-  "dependencies": {},
+  "dependencies": {
+    "discord-rpc": "4.0.1"
+  },
   "devDependencies": {
     "electron": "11.5.0",
     "electron-builder": "^24.13.3"
