--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "electron-builder --win"
   },
   "dependencies": {
-    "discord-rpc": "4.0.1"
+    "discord-rpc": "4.0.1",
+    "electron-prompt": "^1.7.0"
   },
   "devDependencies": {
     "electron": "11.5.0",
