--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "CPPS-Launcher",
   "version": "1.2.0",
-  "description": "Lightweight Club Penguin (CPPS) Launcher",
+  "description": "A launcher for Flash-based Club Penguin Private Servers.",
   "author": "Dragon9135",
   "main": "main.js",
   "license": "MIT",
