--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CPPS-Launcher",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Lightweight Club Penguin (CPPS) Launcher",
   "author": "Dragon9135",
   "main": "main.js",
@@ -14,8 +14,7 @@
     "build": "electron-builder --win"
   },
   "dependencies": {
-    "discord-rpc": "4.0.1",
-    "electron-prompt": "^1.7.0"
+    "discord-rpc": "4.0.1"
   },
   "devDependencies": {
     "electron": "11.5.0",
